<resources>
    <string name="app_name">NewsLetter</string>
    <string name="list_articles">Liste des articles</string>
    <string name="article_details">Article</string>
    <string name="home">Accueil</string>

    <string name="date">Date</string>
    <string name="author">Auteur</string>
    <string name="description">Description</string>
    <string name="title">Titre</string>
    <string name="editeur_site"><u>En savoir plus</u></string>


    <string name="dernierArticles">Derniers articles -> cliquez pour afficher +</string>
    <string name="allArticles">Trier Les Articles</string>
    <string name="byEditor">Editeurs</string>
    <string name="byCategorie">Catégories</string>
    <string name="byCountry">Pays</string>

    <string name="group">Membres du projet</string>
    <string name="nizeyimana">Jean-Eric NIZEYIMANA / GitHub: @jldenzel</string>
    <string name="babeau">Corentin BABEAU / GitHub: @Urukrode</string>
    <string name="argento">Jordan ARGENTO</string>
    <string name="mallassagne">Pierre MALLASSAGNE</string>
    <string name="repo">Repository du projet (Github)</string>
    <string name="linkrepo">https://github.com/jldenzel/NewsLetter</string>
    <string name="libraries_used">Librairies Externes Utilisées</string>
    <string name="functionalities">Fonctionnalités de notre application</string>
    <string name="aboutus">A propos de nous</string>
</resources>