<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_list_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/item_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:maxWidth="250dp"
        android:maxLines="4"
        app:layout_constraintBottom_toTopOf="@+id/item_list_avatar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:textStyle="bold"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/item_list_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:maxWidth="250dp"
        android:maxLines="4"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toTopOf="@+id/item_list_avatar"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/item_list_author"
        android:layout_width="68dp"
        android:layout_height="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:maxWidth="250dp"
        android:maxLines="1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toBottomOf="@+id/item_list_desc"
        tools:text="@string/author" />

    <TextView
        android:id="@+id/item_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:maxWidth="250dp"
        android:maxLines="1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_list_author"
        app:layout_constraintTop_toBottomOf="@+id/item_list_desc"
        tools:text="@string/date" />

    <ImageButton
        android:id="@+id/item_list_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list_desc"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

</androidx.constraintlayout.widget.ConstraintLayout>